@@ -1,46 +1,0 @@
-! +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
-! +                                                           +
-! +  glimmer_vers.f90 - part of the GLIMMER ice model         + 
-! +                                                           +
-! +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
-! 
-! Copyright (C) 2004 GLIMMER contributors - see COPYRIGHT file 
-! for list of contributors.
-!
-! This program is free software; you can redistribute it and/or 
-! modify it under the terms of the GNU General Public License as 
-! published by the Free Software Foundation; either version 2 of 
-! the License, or (at your option) any later version.
-!
-! This program is distributed in the hope that it will be useful, 
-! but WITHOUT ANY WARRANTY; without even the implied warranty of 
-! MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the 
-! GNU General Public License for more details.
-!
-! You should have received a copy of the GNU General Public License 
-! along with this program; if not, write to the Free Software 
-! Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 
-! 02111-1307 USA
-!
-! GLIMMER is maintained by:
-!
-! Ian Rutt
-! School of Geographical Sciences
-! University of Bristol
-! University Road
-! Bristol
-! BS8 1SS
-! UK
-!
-! email: <i.c.rutt@bristol.ac.uk> or <ian.rutt@physics.org>
-!
-! GLIMMER is hosted on NeSCForge:
-!
-! http://forge.nesc.ac.uk/projects/glimmer/
-!
-! +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
-
-module glimmer_vers
-  character(len=*), parameter :: glimmer_version = 'GLIMMER v. 1.5.1 CVS: 2007-03-16 14:12:03 lipscomb_1_5_1'
-  !*FD Glimmer version string
-end module glimmer_vers
